--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
    <header class="navbar">
 
     <div class="logo">
-        <img src="globalimages/GIS LOGO NEW.jpg" alt="Logo">
-    </div>
+    <img src="globalimages/GIS LOGO NEW.jpg" alt="Logo">
+    <span class="logo-name">Global Infotel Solutions</span>
+</div>
+
 
     <!-- Hamburger -->
     <div class="menu-toggle" id="menuBtn">
