--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <span class="logo-name">Global Infotel Solutions</span>
 </div>
 
-
     <!-- Hamburger -->
     <div class="menu-toggle" id="menuBtn">
         <span class="open-icon">☰</span>
@@ -28,23 +27,25 @@
     </div>
 
     <ul class="menu" id="menuList">
-        <li><a href="#">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
 
         <li class="dropdown">
             <a class="dropBtn">ABOUT US ▼</a>
             <ul class="dropMenu">
-                <li><a href="#">Company</a></li>
-                <li><a href="#">Team</a></li>
+                <li><a href="about.html">Company</a></li>
+                <li><a href="mission&vision.html">Mission&Vision</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
         </li>
 
         <li class="dropdown">
             <a class="dropBtn">PRODUCTS ▼</a>
             <ul class="dropMenu">
-                <li><a href="#">Walkie Talkies</a></li>
-                <li><a href="#">Security Devices</a></li>
-                <li><a href="#">CCTV Systems</a></li>
-                <li><a href="#">Accessories</a></li>
+                <li><a href="walkie talkie.html">Walkie Talkies</a></li>
+                <li><a href="Hand Held Metal Detectors.html">Hand Held Metal Detectors </a></li>
+                <li><a href="cctv.html">CCTV Systems</a></li>
+                <li><a href="#">Access Control</a></li>
+                <li><a href="#">Door Frame Metal Detectors</a></li>
             </ul>
         </li>
 
@@ -56,7 +57,7 @@
             </ul>
         </li>
 
-        <li><a href="#">CONTACT US</a></li>
+        <li><a href="contact.html">CONTACT US</a></li>
     </ul>
 
 </header>
