--- a/Access Control.html
+++ b/Access Control.html
@@ -68,103 +68,109 @@
         <img src="globalimages/acess control.jpeg" alt="Banner Image">
     </div>
     <div class="banner-content">
-        <h1>Blog</h1>
-        <p>We provide reliable communication tools that improve safety and productivity...</p>
+        <h1>Advanced Access<br> Control Systems</h1>
+        <p>Smart • Secure • Modern Entry Management Solutions by Global Infotel Solutions</p>
     </div>
 </section>
 
 
-<section class="blog-area">
-    <h2 class="blog-heading">Global Infotel Solutions – Latest Blogs</h2>
-    <p class="blog-tagline">
-        Explore expert insights, product guides and technology updates in Security & Communication Systems.
+<!-- ABOUT ACCESS CONTROL -->
+<section class="acs-about">
+    <h2>What is Access Control?</h2>
+    <p>
+        Access Control Systems are advanced security solutions used to regulate who can enter a facility, 
+        building, room, or restricted zone. Global Infotel Solutions provides cutting-edge technology 
+        that ensures complete safety, accurate identity verification, and seamless movement across your 
+        premises — whether corporate offices, industries, factories, warehouses, hospitals, schools, 
+        government buildings, or high-security departments.
     </p>
 
-    <div class="blog-grid">
+    <p>
+        Our systems are powered by modern technologies like Biometric Authentication, Face Recognition, 
+        RFID Cards, Password Access, QR Login, Mobile App Unlocking & Real-time Monitoring Dashboards.  
+        We aim to build smarter, safer, and more efficient workplaces with intelligent access solutions.
+    </p>
+</section>
 
-        <!-- BLOG 1 -->
-        <div class="blog-item">
-            <img src="globalimages/cctv.jpeg" alt="CCTV Security Blog">
-            <div class="blog-info">
-                <h3>Why CCTV Surveillance is Essential for Modern Security</h3>
-                <p>
-                    CCTV systems have become the backbone of security monitoring. Learn how advanced CCTV 
-                    technologies improve surveillance, reduce risks, and enhance operational safety.
-                </p>
-                <!-- <a href="#" class="read-btn">Read More</a> -->
-            </div>
+<!-- FEATURES -->
+<section class="acs-features">
+    <h2>Key Features of Our Access Control Solutions</h2>
+
+    <div class="acs-grid">
+
+        <div class="acs-card">
+            <img src="globalimages/Biometric Recognition.jpeg">
+            <h3>Biometric Recognition</h3>
+            <p>Ultra-fast fingerprint, face, and palm recognition with 99.9% accuracy.</p>
         </div>
 
-        <!-- BLOG 2 -->
-        <div class="blog-item">
-            <img src="globalimages/walkie talkie.jpeg" alt="Walkie Talkies">
-            <div class="blog-info">
-                <h3>How Walkie-Talkies Improve Fast & Reliable Communication</h3>
-                <p>
-                    Walkie-Talkies offer instant communication in industries, hotels, events, hospitals, and 
-                    security teams. Discover why they remain the most trusted communication tool.
-                </p>
-                <!-- <a href="#" class="read-btn">Read More</a> -->
-            </div>
+        <div class="acs-card">
+            <img src="globalimages/RFID Card Access.jpeg">
+            <h3>RFID Card Access</h3>
+            <p>Smart, durable RFID cards for employees, staff, visitors & contractors.</p>
         </div>
 
-        <!-- BLOG 3 -->
-        <div class="blog-item">
-            <img src="globalimages/acess control.jpeg" alt="Access Control">
-            <div class="blog-info">
-                <h3>The Future of Access Control: Smart, Fast & Secure</h3>
-                <p>
-                    From biometric scanners to RFID access, modern access control systems are creating 
-                    safer and more efficient workplaces. Know how these systems benefit organizations.
-                </p>
-                <!-- <a href="#" class="read-btn">Read More</a> -->
-            </div>
+        <div class="acs-card">
+            <img src="globalimages/Mobile App Unlocking.jpeg">
+            <h3>Mobile App Unlocking</h3>
+            <p>Unlock doors using Bluetooth, WiFi, OTP, or cloud access from anywhere.</p>
         </div>
 
-        <!-- BLOG 4 -->
-        <div class="blog-item">
-            <img src="globalimages/hand held.jpeg" alt="Hand Held Metal Detector">
-            <div class="blog-info">
-                <h3>Hand Held Metal Detectors – A Must-Have for Security Checks</h3>
-                <p>
-                    Metal detectors ensure accurate threat detection at malls, events, airports, and offices. 
-                    Learn what makes them highly effective and essential for security screening.
-                </p>
-                <!-- <a href="#" class="read-btn">Read More</a> -->
-            </div>
+        <div class="acs-card">
+            <img src="globalimages/Face Recognition Terminals.jpeg">
+            <h3>Face Recognition Terminals</h3>
+            <p>AI-powered terminals for advanced identity verification in secure zones.</p>
         </div>
 
-        <!-- BLOG 5 -->
-        <div class="blog-item">
-            <img src="globalimages/door frame.jpeg" alt="Door Frame Metal Detector">
-            <div class="blog-info">
-                <h3>Why Door Frame Metal Detectors Are Vital for Public Security</h3>
-                <p>
-                    DFMDs provide quick scanning and high detection accuracy. Find out how they help in 
-                    maintaining safety in high-traffic areas and critical locations.
-                </p>
-                <!-- <a href="#" class="read-btn">Read More</a> -->
-            </div>
+        <div class="acs-card">
+            <img src="globalimages/Multi-Door Controllers.jpeg">
+            <h3>Multi-Door Controllers</h3>
+            <p>Centralized control of multiple gates with full monitoring & logs.</p>
         </div>
 
-        <!-- BLOG 6 -->
-        <div class="blog-item">
-            <img src="globalimages/search light.jpeg" alt="Search Light">
-            <div class="blog-info">
-                <h3>High-Power Search Lights – Smart Illumination for Security Forces</h3>
-                <p>
-                    Search lights are essential for night patrolling, rescue operations, campus security, 
-                    and industrial monitoring. Discover their features and advantages.
-                </p>
-                <!-- <a href="#" class="read-btn">Read More</a> -->
-            </div>
+        <div class="acs-card">
+            <img src="globalimages/Visitor Management.jpeg">
+            <h3>Visitor Management</h3>
+            <p>Smart registration, QR-based entry, and automated visitor tracking.</p>
         </div>
 
     </div>
 </section>
 
+<!-- PRODUCT GALLERY -->
+<section class="acs-gallery">
+    <h2>Our Access Control Product Range</h2>
 
+    <div class="gallery-grid">
+        <img src="globalimages/acess control.jpeg">
+        <img src="globalimages/Biometric Recognition.jpeg">
+        <img src="globalimages/door frame.jpeg">
+        <img src="globalimages/Face Recognition Terminals.jpeg">
+        <img src="globalimages/Mobile App Unlocking.jpeg">
+        <img src="globalimages/RFID Card Access.jpeg">
+    </div>
+</section>
 
+<!-- WHY CHOOSE US -->
+<section class="acs-why">
+    <h2>Why Choose Global Infotel Solutions?</h2>
+
+    <ul>
+        <li>ISO Certified Company with 10+ Years Experience</li>
+        <li>Top-Quality Security & Access Control Hardware</li>
+        <li>Advanced AI & Cloud-based Real-time Access Management</li>
+        <li>Industry-grade Installation & After-Sales Support</li>
+        <li>Customized Solutions for Corporates, Industries & Government</li>
+        <li>Affordable & High-performance Smart Security Systems</li>
+    </ul>
+</section>
+
+<!-- CTA SECTION -->
+<!-- <section class="acs-cta">
+    <h2>Need Smart Access Control Solutions?</h2>
+    <p>Contact Global Infotel Solutions for premium security products & expert installation services.</p>
+    <a href="#" class="acs-btn">Get Quote</a>
+</section> -->
 
 
 
