--- a/cctv.html
+++ b/cctv.html
@@ -44,8 +44,8 @@
                 <li><a href="walkie talkie.html">Walkie Talkies</a></li>
                 <li><a href="Hand Held Metal Detectors.html">Hand Held Metal Detectors </a></li>
                 <li><a href="cctv.html">CCTV Systems</a></li>
-                <li><a href="#">Access Control</a></li>
-                <li><a href="#">Door Frame Metal Detectors</a></li>
+                <li><a href="Access Control.html">Access Control</a></li>
+                <li><a href="Door Frame.html">Door Frame Metal Detectors</a></li>
             </ul>
         </li>
 
@@ -65,7 +65,7 @@
 <!-- banner  -->
 <section class="banner">
     <div class="banner-image">
-        <img src="globalimages/cctv.jpeg" alt="Banner Image">
+        <img src="globalimages/HD & IP CCTV Cameras.jpeg" alt="Banner Image">
     </div>
     <div class="banner-content">
         <h1>CCTV <br> Cameras</h1>
@@ -115,7 +115,7 @@
                 </p>
             </div>
 
-            <!-- Item 4 -->
+            <!-- Item 4 -->  
             <div class="cctv-card">
                 <img src="globalimages/c3.jpeg" alt="CCTV Camera">
                 <h3>Wireless CCTV Systems</h3>
@@ -128,12 +128,6 @@
         </div>
     </div>
 </section>
-
-
-
-
-
-
 
 <!-- footer  -->
 <footer class="footer">
