--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,8 @@
                 <li><a href="walkie talkie.html">Walkie Talkies</a></li>
                 <li><a href="Hand Held Metal Detectors.html">Hand Held Metal Detectors </a></li>
                 <li><a href="cctv.html">CCTV Systems</a></li>
-                <li><a href="#">Access Control</a></li>
-                <li><a href="#">Door Frame Metal Detectors</a></li>
+                <li><a href="Access Control.html">Access Control</a></li>
+                <li><a href="Door Frame.html">Door Frame Metal Detectors</a></li>
             </ul>
         </li>
 
