--- a/contact.html
+++ b/contact.html
@@ -42,18 +42,17 @@
             <a class="dropBtn">PRODUCTS ▼</a>
             <ul class="dropMenu">
                 <li><a href="walkie talkie.html">Walkie Talkies</a></li>
-                <li><a href="Hand Held Metal Detectors.html">Hand Held Metal Detectors </a></li>
-                <li><a href="cctv.html">CCTV Systems</a></li>
-                <li><a href="Access Control.html">Access Control</a></li>
-                <li><a href="Door Frame.html">Door Frame Metal Detectors</a></li>
             </ul>
         </li>
 
         <li class="dropdown">
             <a class="dropBtn">SERVICES ▼</a>
             <ul class="dropMenu">
-                <li><a href="#">Installation</a></li>
-                <li><a href="#">Maintenance</a></li>
+                <li><a href="walkie talkie.html">Walkie Talkies</a></li>
+                <li><a href="Hand Held Metal Detectors.html">Hand Held Metal Detectors </a></li>
+                <li><a href="cctv.html">CCTV Systems</a></li>
+                <li><a href="Access Control.html">Access Control</a></li>
+                <li><a href="Door Frame.html">Door Frame Metal Detectors</a></li>
             </ul>
         </li>
 
