--- a/Access Control.html
+++ b/Access Control.html
@@ -30,31 +30,88 @@
         <li><a href="index.html">HOME</a></li>
 
         <li class="dropdown">
-            <a class="dropBtn">ABOUT US ▼</a>
+     <a href="about.html" class="dropMain">ABOUT US</a>
+             <span class="dropBtnArrow">▼</span>
             <ul class="dropMenu">
-                <li><a href="about.html">Company</a></li>
                 <li><a href="mission&vision.html">Mission&Vision</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
         </li>
 
         <li class="dropdown">
-            <a class="dropBtn">PRODUCTS ▼</a>
-            <ul class="dropMenu">
-                <li><a href="walkie talkie.html">Walkie Talkies</a></li>
+  
+     <a href="products.html" class="dropMain">PRODUCTS</a>
+             <span class="dropBtnArrow">▼</span>
+
+    <ul class="dropMenu">
+
+        <!-- COLUMN 1 -->
+        <li>
+            <strong style="color:#000; font-size:16px; font-weight:600;">
+                License Free Walkie Talkies >
+            </strong>
+            <ul class="sub-menu">
+                <li><a href="#">Access P2</a></li>
+                <li><a href="#">Access P9</a></li>
+                <li><a href="#">Access P3</a></li>
+                <li><a href="#">Access P1 Relay</a></li>
+                <li><a href="#">Lenovo N99</a></li>
+                <li><a href="#">Lenovo N89 Digital</a></li>
+                <li><a href="#">Lenovo N7</a></li>
+                <li><a href="#">Lenovo CC100</a></li>
+                <li><a href="#">Kanwee K50</a></li>
+                <li><a href="#">Kanwee K100</a></li>
+                <li><a href="#">Kanwee K10</a></li>
+                <li><a href="#">Kanwee K20</a></li>
+                <li><a href="#">Kanwee K60 Digital</a></li>
+                <li><a href="#">Alinco DJ-VX46</a></li>
             </ul>
         </li>
 
-        <li class="dropdown">
-            <a class="dropBtn">SERVICES ▼</a>
-            <ul class="dropMenu">
-                <li><a href="walkie talkie.html">Walkie Talkies</a></li>
-                <li><a href="Hand Held Metal Detectors.html">Hand Held Metal Detectors </a></li>
-                <li><a href="cctv.html">CCTV Systems</a></li>
+        <!-- COLUMN 2 -->
+        <li>
+            <strong style="color:#000; font-size:16px; font-weight:600;">
+                License Free Intrinsically Safe >
+            </strong>
+            <ul class="sub-menu">
+                <li><a href="#">Alinco DJ-X15-45</a></li>
+                <li><a href="#">Hytera HP708 IS LF</a></li>
+                <li><a href="#">Hytera HP508 IS LF</a></li>
+            </ul>
+        </li>
+
+        <!-- COLUMN 3 -->
+        <li>
+            <strong style="color:#000; font-size:16px; font-weight:600;">
+                POC Radios >
+            </strong>
+            <ul class="sub-menu">
+                <li><a href="#">Hytera P50</a></li>
+                <li><a href="#">Hytera P50 Pro</a></li>
+                <li><a href="#">Hytera PNC 380</a></li>
+                <li><a href="#">Hytera PNC 360</a></li>
+                <li><a href="#">Hytera MNC 360</a></li>
+            </ul>
+        </li>
+
+        <!-- COLUMN 4 -->
+        <li>
+            <strong style="color:#000; font-size:16px; font-weight:600;">
+                All Solutions >
+            </strong>
+            <ul class="sub-menu">
+                <li><a href="cctv.html">Cctv</a></li>
                 <li><a href="Access Control.html">Access Control</a></li>
+                <li><a href="walkie talkie.html">Two Way Radios- Walkie Talkie</a></li>
+                <li><a href="Hand Held Metal Detectors.html">Hand Held Metal Detectors</a></li>
                 <li><a href="Door Frame.html">Door Frame Metal Detectors</a></li>
             </ul>
         </li>
+
+    </ul>
+</li>
+
+        <li><a href="sevices.html">SERVICES</a></li>
 
         <li><a href="contact.html">CONTACT US</a></li>
     </ul>
