--- a/products.html
+++ b/products.html
@@ -29,7 +29,7 @@
     <ul class="menu" id="menuList">
         <li><a href="index.html">HOME</a></li>
 
-      <li class="dropdown">
+        <li class="dropdown">
      <a href="about.html" class="dropMain">ABOUT US</a>
              <span class="dropBtnArrow">▼</span>
             <ul class="dropMenu">
@@ -39,12 +39,9 @@
         </li>
 
         <li class="dropdown">
-  
      <a href="products.html" class="dropMain">PRODUCTS</a>
              <span class="dropBtnArrow">▼</span>
-
     <ul class="dropMenu">
-
         <!-- COLUMN 1 -->
         <li>
             <strong style="color:#000; font-size:16px; font-weight:600;">
@@ -67,7 +64,6 @@
                 <li><a href="#">Alinco DJ-VX46</a></li>
             </ul>
         </li>
-
         <!-- COLUMN 2 -->
         <li>
             <strong style="color:#000; font-size:16px; font-weight:600;">
@@ -79,7 +75,6 @@
                 <li><a href="#">Hytera HP508 IS LF</a></li>
             </ul>
         </li>
-
         <!-- COLUMN 3 -->
         <li>
             <strong style="color:#000; font-size:16px; font-weight:600;">
@@ -93,7 +88,6 @@
                 <li><a href="#">Hytera MNC 360</a></li>
             </ul>
         </li>
-
         <!-- COLUMN 4 -->
         <li>
             <strong style="color:#000; font-size:16px; font-weight:600;">
@@ -121,66 +115,184 @@
 <!-- banner  -->
 <section class="banner">
     <div class="banner-image">
-        <img src="globalimages/HD & IP CCTV Cameras.jpeg" alt="Banner Image">
+        <img src="globalimages/cctv.jpeg" alt="Banner Image">
     </div>
     <div class="banner-content">
-        <h1>CCTV <br> Cameras</h1>
+        <h1>PRODUCTS</h1>
         <p>We provide reliable communication tools that improve safety and productivity...</p>
     </div>
 </section>
 
-<!-- cctv section  -->
-<!-- CCTV CAMERA SECTION -->
-<section class="cctv-section">
-    <div class="container">
-        <h2 class="section-title">CCTV Camera Solutions</h2>
-        <p class="section-subtitle">
-            Global Infotel Solutions provides a complete range of advanced CCTV surveillance systems 
-            designed for homes, offices, industries, hospitals, warehouses, shops & large organizations.
-        </p>
+<!-- product  -->
+<section class="product-section">
 
-        <div class="cctv-grid">
+    <!-- ================================
+         License Free Walkie Talkies
+    ===================================-->
+    <h1 class="section-title">License Free Walkie Talkies</h1>
+    <div class="Hytera product-row">
+        <div class="card">
+            <img src="globalimages/walkie talkie.jpeg">
+            <h3>Access P2</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
 
-            <!-- Item 1 -->
-            <div class="cctv-card">
-                <img src="globalimages/HD & IP CCTV Cameras.jpeg" alt="CCTV Camera">
-                <h3>HD & IP CCTV Cameras</h3>
-                <p>
-                    High-definition and IP-based smart surveillance cameras with crystal clear video quality, 
-                    night vision, motion detection & mobile live view support.
-                </p>
-            </div>
+        <div class="card">
+            <img src="globalimages/wt1.jpeg">
+            <h3>Access P9</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
 
-            <!-- Item 2 -->
-            <div class="cctv-card">
-                <img src="globalimages/c1.jpeg" alt="CCTV Camera">
-                <h3>Dome & Bullet Cameras</h3>
-                <p>
-                    Durable dome & bullet cameras ideal for indoor and outdoor security with advanced 
-                    weatherproof design and long-range IR night monitoring.
-                </p>
-            </div>
+        <div class="card">
+            <img src="globalimages/wt2.jpeg">
+            <h3>Access P3</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
 
-            <!-- Item 3 -->
-            <div class="cctv-card">
-                <img src="globalimages/c2.jpeg" alt="CCTV Camera">
-                <h3>360° PTZ Cameras</h3>
-                <p>
-                    PTZ cameras with full 360° rotation, optical zoom, auto-tracking & real-time monitoring for 
-                    large spaces such as factories & parking areas.
-                </p>
-            </div>
+        <div class="card">
+            <img src="globalimages/wt3.jpeg">
+            <h3>Access P1 Relay</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
 
-            <!-- Item 4 -->  
-            <div class="cctv-card">
-                <img src="globalimages/c3.jpeg" alt="CCTV Camera">
-                <h3>Wireless CCTV Systems</h3>
-                <p>
-                    Easy-to-install wireless cameras supporting WiFi, cloud backup, two-way audio & 
-                    instant alerts on your mobile device.
-                </p>
-            </div>
+        <div class="card">
+            <img src="globalimages/wt4.jpeg">
+            <h3>Lenovo N99</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
 
+        <div class="card">
+            <img src="globalimages/walkie talkie.jpeg">
+            <h3>Lenovo N89 Digital</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
+
+        <div class="card">
+            <img src="globalimages/wt1.jpeg">
+            <h3>Lenovo N7</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
+
+        <div class="card">
+            <img src="globalimages/wt2.jpeg">
+            <h3>Lenovo CC100</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
+
+        <div class="card">
+            <img src="globalimages/wt3.jpeg">
+            <h3>Kanwee K50</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
+
+        <div class="card">
+            <img src="globalimages/wt4.jpeg">
+            <h3>Kanwee K100</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
+
+        <div class="card">
+            <img src="globalimages/walkie talkie.jpeg">
+            <h3>Kanwee K10</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
+
+        <div class="card">
+            <img src="globalimages/wt1.jpeg">
+            <h3>Kanwee K20</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
+
+        <div class="card">
+            <img src="globalimages/wt2.jpeg">
+            <h3>Kanwee K60 Digital</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
+
+        <div class="card">
+            <img src="globalimages/wt4.jpeg">
+            <h3>Alinco DJ-VX46</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
+
+    </div>
+
+
+    <!-- ================================
+        License Free Intrinsically Safe
+    ===================================-->
+    <h1 class="section-title">License Free Intrinsically Safe</h1>
+    <div class="Hytera product-row">
+        <div class="card">
+            <img src="globalimages/wt1.jpeg">
+            <h3>Alinco DJ-X15-45</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
+
+        <div class="card">
+            <img src="globalimages/wt2.jpeg">
+            <h3>Hytera HP708 IS LF</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
+
+        <div class="card">
+            <img src="globalimages/wt4.jpeg">
+            <h3>Hytera HP508 IS LF</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
+
+    </div>
+
+    <!-- ================================
+                 POC Radios
+    ===================================-->
+    <h1 class="section-title">POC Radios</h1>
+
+    <div class="Hytera product-row">
+
+        <div class="card">
+            <img src="globalimages/wt1.jpeg">
+            <h3>Hytera P50</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
+
+        <div class="card">
+            <img src="globalimages/wt3.jpeg">
+            <h3>Hytera P50 Pro</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
+
+        <div class="card">
+            <img src="globalimages/wt2.jpeg">
+            <h3>Hytera PNC 380</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
+        </div>
+
+        <div class="card">
+            <img src="globalimages/wt4.jpeg">
+            <h3>Hytera PNC 360</h3>
+            <p class="price">₹ 00.00</p>
+             <a href="explore.html" class="btn-explore">Explore More</a>
         </div>
     </div>
 </section>
