--- a/sevices.html
+++ b/sevices.html
@@ -29,7 +29,7 @@
     <ul class="menu" id="menuList">
         <li><a href="index.html">HOME</a></li>
 
-      <li class="dropdown">
+     <li class="dropdown">
      <a href="about.html" class="dropMain">ABOUT US</a>
              <span class="dropBtnArrow">▼</span>
             <ul class="dropMenu">
@@ -39,7 +39,7 @@
         </li>
 
         <li class="dropdown">
-  
+ 
      <a href="products.html" class="dropMain">PRODUCTS</a>
              <span class="dropBtnArrow">▼</span>
 
@@ -107,7 +107,6 @@
                 <li><a href="Door Frame.html">Door Frame Metal Detectors</a></li>
             </ul>
         </li>
-
     </ul>
 </li>
 
@@ -121,69 +120,128 @@
 <!-- banner  -->
 <section class="banner">
     <div class="banner-image">
-        <img src="globalimages/HD & IP CCTV Cameras.jpeg" alt="Banner Image">
+        <img src="globalimages/cctv.jpeg" alt="Banner Image">
     </div>
     <div class="banner-content">
-        <h1>CCTV <br> Cameras</h1>
+        <h1>Services</h1>
         <p>We provide reliable communication tools that improve safety and productivity...</p>
     </div>
 </section>
 
-<!-- cctv section  -->
-<!-- CCTV CAMERA SECTION -->
-<section class="cctv-section">
-    <div class="container">
-        <h2 class="section-title">CCTV Camera Solutions</h2>
-        <p class="section-subtitle">
-            Global Infotel Solutions provides a complete range of advanced CCTV surveillance systems 
-            designed for homes, offices, industries, hospitals, warehouses, shops & large organizations.
-        </p>
 
-        <div class="cctv-grid">
+<section class="security-section">
+    <div class="security-container">
 
-            <!-- Item 1 -->
-            <div class="cctv-card">
-                <img src="globalimages/HD & IP CCTV Cameras.jpeg" alt="CCTV Camera">
-                <h3>HD & IP CCTV Cameras</h3>
+        <!-- CCTV -->
+        <div class="security-item">
+            <div class="security-image">
+                <img src="globalimages/c3.jpeg" alt="CCTV">
+            </div>
+            <div class="security-content">
+                <h2>CCTV</h2>
                 <p>
-                    High-definition and IP-based smart surveillance cameras with crystal clear video quality, 
-                    night vision, motion detection & mobile live view support.
+                    CCTV systems provide high-quality surveillance for homes, offices, factories,
+                    warehouses, and public places.
                 </p>
             </div>
-
-            <!-- Item 2 -->
-            <div class="cctv-card">
-                <img src="globalimages/c1.jpeg" alt="CCTV Camera">
-                <h3>Dome & Bullet Cameras</h3>
-                <p>
-                    Durable dome & bullet cameras ideal for indoor and outdoor security with advanced 
-                    weatherproof design and long-range IR night monitoring.
-                </p>
-            </div>
-
-            <!-- Item 3 -->
-            <div class="cctv-card">
-                <img src="globalimages/c2.jpeg" alt="CCTV Camera">
-                <h3>360° PTZ Cameras</h3>
-                <p>
-                    PTZ cameras with full 360° rotation, optical zoom, auto-tracking & real-time monitoring for 
-                    large spaces such as factories & parking areas.
-                </p>
-            </div>
-
-            <!-- Item 4 -->  
-            <div class="cctv-card">
-                <img src="globalimages/c3.jpeg" alt="CCTV Camera">
-                <h3>Wireless CCTV Systems</h3>
-                <p>
-                    Easy-to-install wireless cameras supporting WiFi, cloud backup, two-way audio & 
-                    instant alerts on your mobile device.
-                </p>
-            </div>
-
         </div>
+
+        <!-- Biometric -->
+        <div class="security-item">
+            <div class="security-image">
+                <img src="globalimages/acess control.jpeg" alt="Biometric">
+            </div>
+            <div class="security-content">
+                <h2>Access Control Biometric Machine</h2>
+                <p>
+                    Biometric access control ensures secure authentication with fingerprint, face,
+                    card or password options.
+                </p>
+            </div>
+        </div>
+
+        <!-- HHMD -->
+        <div class="security-item">
+            <div class="security-image">
+                <img src="globalimages/hhmd.jpeg" alt="Metal Detector">
+            </div>
+            <div class="security-content">
+                <h2>Hand Held Metal Detector</h2>
+                <p>
+                    Detects concealed weapons & metal objects with high sensitivity at malls,
+                    airports & events.
+                </p>
+            </div>
+        </div>
+
+        <!-- DFMD -->
+        <div class="security-item">
+            <div class="security-image">
+                <img src="globalimages/Multi-Zone Detection.jpeg" alt="Door Frame Metal Detector">
+            </div>
+            <div class="security-content">
+                <h2>Door Frame Metal Detector</h2>
+                <p>
+                    Walk-through multi-zone detection system for screening people at entry points.
+                </p>
+            </div>
+        </div>
+
+        <!-- Search Light -->
+        <div class="security-item">
+            <div class="security-image">
+                <img src="globalimages/search light.jpeg" alt="Search Light">
+            </div>
+            <div class="security-content">
+                <h2>Search Light</h2>
+                <p>
+                    High power long-range illumination for night patrol & emergency situations.
+                </p>
+            </div>
+        </div>
+
+        <!-- Walkie Talkie -->
+        <div class="security-item">
+            <div class="security-image">
+                <img src="globalimages/walkie talkie.jpeg" alt="Walkie Talkie">
+            </div>
+            <div class="security-content">
+                <h2>Walkie Talkie</h2>
+                <p>
+                    Push-to-talk instant communication for security teams, events & industries.
+                </p>
+            </div>
+        </div>
+
+        <!-- Vehicle Search Mirror -->
+        <div class="security-item">
+            <div class="security-image">
+                <img src="globalimages/Portable Vehicle Search Mirrors.jpeg" alt="Vehicle Search Mirror">
+            </div>
+            <div class="security-content">
+                <h2>Portable Vehicle Search Mirrors</h2>
+                <p>
+                    Used for under-vehicle inspection to detect explosives & suspicious objects.
+                </p>
+            </div>
+        </div>
+
+        <!-- PTP/PTMP -->
+        <div class="security-item">
+            <div class="security-image">
+                <img src="globalimages/Point to Point & Multipoint Link.jpeg" alt="Wireless Link">
+            </div>
+            <div class="security-content">
+                <h2>Point to Point & Multipoint Link</h2>
+                <p>
+                    High-speed wireless data connectivity between buildings & towers.
+                </p>
+            </div>
+        </div>
+
     </div>
 </section>
+
 
 <!-- footer  -->
 <footer class="footer">
